--- a/dev/scss/_typog.scss
+++ b/dev/scss/_typog.scss
@@ -8,7 +8,7 @@ body{
 }
 
 
-h1, h2{
+h1, h2, h3{
     font-family: 'Roboto Condensed', sans-serif;
     font-style: normal;
     font-weight: 400;
